--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 Wed Aug 20 22:22:31 1997  Martin Junius  <mj@fido.de>
 
 	======= Release 4.2.6 ================================================
-	------- CVS ci, tag R426 ---------------------------------------------
+	------- CVS ci -------------------------------------------------------
 
 	* ANNOUNCE: update.
 
